Putting GPS into API Call
Hopefully this works...

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=720
 NewWindowHeight=1280
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=3384,Y=67)
+MultipleInstancePositions=(X=4031,Y=279)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -117,7 +117,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Vic-Test
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -146,12 +146,11 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=2556.000 Y=221.600
-WindowSize=X=1300.000 Y=740.000
+ScreenPosition=X=2921.143 Y=253.143
+WindowSize=X=1304.000 Y=744.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -979,9 +978,9 @@ SequencerWidgets.TimeStamp=2021.11.10-16.25.44
 SequencerWidgets.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2021.11.08-14.20.41
 ExternalImagePicker.LastCompileMethod=External
-Voice.TimeStamp=2021.11.08-14.20.51
+Voice.TimeStamp=2021.11.10-16.25.47
 Voice.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2021.11.08-14.20.44
+MovieSceneCapture.TimeStamp=2021.11.10-16.25.41
 MovieSceneCapture.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2021.11.08-14.20.41
 HierarchicalLODUtilities.LastCompileMethod=Unknown
@@ -993,6 +992,10 @@ VaRest.TimeStamp=2021.11.16-19.25.14
 VaRest.LastCompileMethod=External
 VaRestEditor.TimeStamp=2021.11.16-19.25.15
 VaRestEditor.LastCompileMethod=External
+BlueprintFileUtils.TimeStamp=2021.11.10-16.29.17
+BlueprintFileUtils.LastCompileMethod=Unknown
+LocationServicesAndroidEditor.TimeStamp=2021.11.10-16.31.13
+LocationServicesAndroidEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/MainMenu
@@ -1071,25 +1074,25 @@ FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
 MRUItem0=/Game/APICaller
-MRUItem1=/Game/Vic-Test/TestEditor
-MRUItem2=/Game/Vic-Test/StringTest
-MRUItem3=/Game/MapBillboard
-MRUItem4=/Game/DownloadedMaterial
-MRUItem5=/Game/Menus/GameOverlayWidget
-MRUItem6=/Game/Menus/EncyclopediaMenuWidget
-MRUItem7=/Game/Menus/SettingsWidget
-MRUItem8=/Game/Menus/MainMenuWidget
-MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem10=/Game/ThirdPerson/Meshes/Bump_StaticMesh
-MRUItem11=/Game/Menus/MainMenuGameMode
-MRUItem12=/Game/Menus/MainMenuPlayerController
-MRUItem13=/Game/Assets/library-locations-map_Mat
-MRUItem14=/Game/Assets/library-locations-map
-MRUItem15=/Game/Levels/MainMenu
-MRUItem16=/Game/Menus/SaveGameSettings
-MRUItem17=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem18=/Game/Assets/ES_Multimedia_770_-_SFX_Producer_Cue
-MRUItem19=/Game/NewSoundMix
+MRUItem1=/Game/StringTest
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Vic-Test/TestEditor
+MRUItem4=/Game/Vic-Test/StringTest
+MRUItem5=/Game/MapBillboard
+MRUItem6=/Game/DownloadedMaterial
+MRUItem7=/Game/Menus/GameOverlayWidget
+MRUItem8=/Game/Menus/EncyclopediaMenuWidget
+MRUItem9=/Game/Menus/SettingsWidget
+MRUItem10=/Game/Menus/MainMenuWidget
+MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem12=/Game/ThirdPerson/Meshes/Bump_StaticMesh
+MRUItem13=/Game/Menus/MainMenuGameMode
+MRUItem14=/Game/Menus/MainMenuPlayerController
+MRUItem15=/Game/Assets/library-locations-map_Mat
+MRUItem16=/Game/Assets/library-locations-map
+MRUItem17=/Game/Menus/SaveGameSettings
+MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem19=/Game/Assets/ES_Multimedia_770_-_SFX_Producer_Cue
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1890,6 +1893,7 @@ StringTest_C.Actor=True
 StringTest_C.Input=True
 K2Node_InputAction.Input=True
 VaRestSettings.VaRest=True
+MainMenu_C.Default=True
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1998,6 +2002,7 @@ VaRestSettings=True
 /Game/APICaller.APICaller=1
 /Game/Vic-Test/TestEditor.TestEditor=1
 /Game/Vic-Test/StringTest.StringTest=1
+/Game/StringTest.StringTest=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
