Changed Level Blueprint Slightly
Moved execution from OnLocationChange to Bind on LocationChange

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=2921.143 Y=253.143
