--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -48,3 +48,11 @@ SDKPath=(Path="")
 NDKPath=(Path="")
 JavaPath=(Path="")
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
